@@ -4,6 +4,7 @@ This file contains a log of changes to the API.
 
 API version 1.3:
   Introduce ctools_jump_menu().
+  Change plugins to no longer need magic function. Can now use $plugin = array(...) instead.
 
 API version 1.2:
   Introduce ctools_set_variable_token().
