@@ -7,19 +7,18 @@
  */
 
 /**
- * Implementation of specially named hook_ctools_access().
+ * Plugins are described by creating a $plugin array which will be used
+ * by the system that includes this file.
  */
-function ctools_perm_ctools_access() {
-  return array(
-    'title' => t("User: permission"),
-    'description' => t('Control access by permission string.'),
-    'callback' => 'ctools_perm_ctools_access_check',
-    'default' => array('perm' => 'access content'),
-    'settings form' => 'ctools_perm_ctools_access_settings',
-    'summary' => 'ctools_perm_ctools_acesss_summary',
-    'required context' => new ctools_context_required(t('User'), 'user'),
-  );
-}
+$plugin = array(
+  'title' => t("User: permission"),
+  'description' => t('Control access by permission string.'),
+  'callback' => 'ctools_perm_ctools_access_check',
+  'default' => array('perm' => 'access content'),
+  'settings form' => 'ctools_perm_ctools_access_settings',
+  'summary' => 'ctools_perm_ctools_acesss_summary',
+  'required context' => new ctools_context_required(t('User'), 'user'),
+);
 
 /**
  * Settings form for the 'by perm' access plugin
