@@ -7,20 +7,19 @@
  */
 
 /**
- * Implementation of specially named hook_ctools_access().
+ * Plugins are described by creating a $plugin array which will be used
+ * by the system that includes this file.
  */
-function ctools_role_ctools_access() {
-  return array(
-    'title' => t("User: role"),
-    'description' => t('Control access by role.'),
-    'callback' => 'ctools_role_ctools_access_check',
-    'default' => array('rids' => array()),
-    'settings form' => 'ctools_role_ctools_access_settings',
-    'settings form submit' => 'ctools_role_ctools_access_settings_submit',
-    'summary' => 'ctools_role_ctools_acesss_summary',
-    'required context' => new ctools_context_required(t('User'), 'user'),
-  );
-}
+$plugin = array(
+  'title' => t("User: role"),
+  'description' => t('Control access by role.'),
+  'callback' => 'ctools_role_ctools_access_check',
+  'default' => array('rids' => array()),
+  'settings form' => 'ctools_role_ctools_access_settings',
+  'settings form submit' => 'ctools_role_ctools_access_settings_submit',
+  'summary' => 'ctools_role_ctools_acesss_summary',
+  'required context' => new ctools_context_required(t('User'), 'user'),
+);
 
 /**
  * Settings form for the 'by role' access plugin
